--- a/resources/data/loader/textures.conf
+++ b/resources/data/loader/textures.conf
@@ -2,6 +2,7 @@ concrete		"concrete.jpg"
 spotlight 		"spotlight-mask.png"
 apple			"apple.png"
 bananas			"bananas.png" 
+radar           "radar.png"
 //snake data 
 snake-head		"snake-head.png"
 snake-tail		"snake-tail.png"
